--- a/css/main.css
+++ b/css/main.css
@@ -34,10 +34,33 @@ a {
     flex-direction: column;
 }
 
+.sections {
+    margin: 10px;
+}
+
 .name {
     text-align: center;
     font-weight: bold;
     font-size: 22px;
+}
+
+.card-header {
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.card-content {
+    font-size: 14px;
+}
+
+.card {
+    border-radius: 10px;
+    border: 1px solid #777;
+    margin: 50px 20px;
+    padding: 10px 20px;
+    width: 450px;
+    display: inline-block;
+    background-color: #1a2024;
 }
 
 .profile-pic {
